@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,19 +23,74 @@
 
 
 import java.io.PrintStream;
-import java.util.*;
+import java.nio.file.Path;
 
+import jdk.test.lib.process.OutputAnalyzer;
+import jdk.test.lib.process.ProcessTools;
+import jdk.test.lib.helpers.ClassFileInstaller;
+
+/*
+ * @test
+ * @bug 6274264 6274241 5070281
+ * @summary test retransformClasses
+ *
+ * @modules java.instrument
+ * @library /test/lib
+ * @build RetransformAgent asmlib.Instrumentor
+ * @enablePreview
+ * @comment The test uses asmlib/Instrumentor.java which relies on ClassFile API PreviewFeature.
+ * @run driver/timeout=240 RetransformApp roleDriver
+ * @comment The test uses a higher timeout to prevent test timeouts noted in JDK-6528548
+ */
 public class RetransformApp {
 
-    public static void main(String args[]) throws Exception {
-        (new RetransformApp()).run(args, System.out);
+    public static void main(String[] args) throws Exception {
+        if (args.length == 1) {
+            if (!"roleDriver".equals(args[0])) {
+                throw new Exception("unexpected program argument: " + args[0]);
+            }
+            // launch the RetransformApp java process after creating the necessary
+            // infrastructure
+            System.out.println("creating agent jar");
+            final Path agentJar = createAgentJar();
+            System.out.println("launching app, with javaagent jar: " + agentJar);
+            launchApp(agentJar);
+        } else {
+            System.err.println("running app");
+            new RetransformApp().run(System.out);
+        }
+    }
+
+    private static Path createAgentJar() throws Exception {
+        Path agentJar = Path.of("RetransformAgent.jar");
+        final String manifest = """
+                Manifest-Version: 1.0
+                Premain-Class: RetransformAgent
+                Can-Retransform-Classes: true
+                """;
+        System.out.println("Manifest is:\n" + manifest);
+        ClassFileInstaller.writeJar(agentJar.getFileName().toString(),
+                ClassFileInstaller.Manifest.fromString(manifest),
+                "RetransformAgent",
+                "asmlib.Instrumentor");
+        return agentJar;
+    }
+
+    private static void launchApp(final Path agentJar) throws Exception {
+        final OutputAnalyzer oa = ProcessTools.executeTestJava(
+                "--enable-preview", // due to usage of ClassFile API PreviewFeature in the agent
+                "-javaagent:" + agentJar.toString(),
+                RetransformApp.class.getName());
+        oa.shouldHaveExitValue(0);
+        // make available stdout/stderr in the logs, even in case of successful completion
+        oa.reportDiagnosticSummary();
     }
 
     int foo(int x) {
         return x * x;
     }
 
-    public void run(String args[], PrintStream out) throws Exception {
+    public void run(PrintStream out) throws Exception {
         out.println("start");
         for (int i = 0; i < 4; i++) {
             if (foo(3) != 9) {
